<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Offline Calendar</string>

    <string name="edit_activity_name_new">New Calendar</string>
    <string name="edit_activity_name_edit">Edit Calendar</string>
    <string name="edit_activity_cal_name">Name</string>
    <string name="edit_activity_cal_color">Color</string>
    <string name="edit_activity_save">Save</string>
    <string name="edit_activity_delete">Delete</string>
    <string name="edit_activity_import_export">Import/Export</string>
    <string name="edit_activity_new_event">New Event</string>

    <string name="edit_activity_really_delete_title">Delete calendar?</string>
    <string name="edit_activity_really_delete">After deletion, this calendar and all its events will be lost.</string>
    <string name="edit_activity_error_delete">Error on deletion!</string>
    <string name="edit_activity_error_add">Adding the calendar failed!\nIf you are using Cyanogenmod: Make sure that Privacy Guard is disabled for this application to allow calendar read/write.\nIf you are using Android 4.3 App Ops: Make sure that you allow calendar read/write access for this application.</string>
    <string name="edit_activity_error_empty_name">Enter a calendar name!</string>
    <string name="edit_activity_delete_dialog_button">Delete</string>

    <string name="main_activity_empty_list">No offline calendars available.\n\nYou can create new calendars using the
        Menu.
    </string>

    <string name="main_activity_sd_card_error">Offline Calendar will not work properly if it has been installed on the SD card. Please move it to internal storage!</string>
    <string name="main_activity_permission_error">Offline Calendar requires access to the calendar storage.</string>

    <string name="no_ical_title">iCal Import/Export</string>
    <string name="no_ical_message">iCal Import/Export is not installed. Do you want to install it?</string>


    <string name="menu_new">New Calendar</string>
    <string name="menu_about">About</string>
    <string name="menu_preferences">Preferences</string>

    <!-- Adapter Screen -->
    <string name="pref_account_header">Settings</string>
    <string name="pref_account_settings">Configure Offline Calendar</string>

    <!-- Preferences -->
    <string name="pref_darktheme_title">Use dark theme</string>
    <string name="pref_darktheme_summary">Use the dark theme on next application start.</string>

    <!-- About -->
    <string name="about">Offline Calendar lets you add calendars. These calendars are not synchronized into the cloud
        and only locally available!
        \n\nHelp translating, developing, or report bugs on http://www.sufficientlysecure.org/android
        \n\nLicense: GPLv3+
        \n\nLibraries:
        \n- Holo ColorPicker (Apache License v2)
        \n- Android Support Libs (Apache License v2)
    </string>

</resources>
