<android.support.design.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/main_content"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <android.support.design.widget.AppBarLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:minHeight="?attr/actionBarSize">

            <android.support.v7.widget.Toolbar
                android:id="@+id/toolbar"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="?attr/colorPrimary"
                android:minHeight="?attr/actionBarSize" />

            <LinearLayout
                android:id="@+id/toolbar2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentBottom="true"
                android:layout_alignParentEnd="true"
                android:layout_alignParentLeft="true"
                android:layout_alignParentRight="true"
                android:layout_alignParentStart="true"
                android:layout_marginLeft="40dp"
                android:minHeight="?attr/actionBarSize"
                android:orientation="horizontal">

                <ImageButton
                    android:id="@+id/edit_activity_new_event"
                    style="?android:attr/borderlessButtonStyle"
                    android:layout_width="64dp"
                    android:layout_height="64dp"
                    android:contentDescription="@string/edit_activity_new_event"
                    android:src="@drawable/ic_event_black_24dp" />

                <ImageButton
                    android:id="@+id/edit_activity_import_export"
                    style="?android:attr/borderlessButtonStyle"
                    android:layout_width="64dp"
                    android:layout_height="64dp"
                    android:contentDescription="@string/edit_activity_import_export"

                    android:src="@drawable/ic_swap_vert_black_24dp" />

                <ImageButton
                    android:id="@+id/edit_activity_delete"
                    style="?android:attr/borderlessButtonStyle"
                    android:layout_width="64dp"
                    android:layout_height="64dp"
                    android:contentDescription="@string/edit_activity_delete"
                    android:src="@drawable/ic_delete_black_24dp" />

            </LinearLayout>

        </android.support.design.widget.AppBarLayout>

        <ScrollView
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:paddingBottom="8dp"
                android:paddingLeft="16dp"
                android:paddingRight="16dp"
                android:paddingTop="8dp">

                <android.support.design.widget.TextInputLayout
                    android:id="@+id/edit_activity_text_cal_name_layout"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:padding="8dp">

                    <EditText
                        android:id="@+id/edit_activity_text_cal_name"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:hint="@string/edit_activity_cal_name"
                        android:inputType="text" />
                </android.support.design.widget.TextInputLayout>

                <com.larswerkman.holocolorpicker.ColorPicker
                    android:id="@+id/edit_activity_color_picker"
                    android:layout_width="match_parent"
                    android:layout_height="240dp"
                    android:layout_gravity="center"
                    android:padding="8dp" />

                <com.larswerkman.holocolorpicker.SVBar
                    android:id="@+id/edit_activity_svbar"
                    android:layout_width="322dp"
                    android:layout_height="112dp"
                    android:layout_gravity="center"
                    android:layout_margin="8dip" />

            </LinearLayout>
        </ScrollView>

    </LinearLayout>

</android.support.design.widget.CoordinatorLayout>